--- a/index.html
+++ b/index.html
@@ -14,5 +14,4 @@
 
 <script>document.getElementById("leform").submit();</script>
 
-<iframe src="https://giphy.com/embed/de5bARu0SsXiU" width="480" height="253" frameBorder="0" class="giphy-embed" allowFullScreen id="gif
-" name="gif"></iframe>
+<iframe src="https://giphy.com/embed/de5bARu0SsXiU" width="480" height="253" frameBorder="0" class="giphy-embed" allowFullScreen id="gif" name="gif"></iframe>
